added meta tags

--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./src/assets/book.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:title" content="" />
-  <meta property="og:description" content="" />
-  <meta property="og:image" content="" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="" />
+  <meta property="og:url" content="https://asmodeus-xs.github.io/typescript-router">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="React mentoring">
+  <meta property="og:description" content="Multi-page mentoring website using React Router">
+  <meta property="og:site_name" content="React mentoring" />
+  <meta property="og:image" content="https://asmodeus-xs.github.io/typescript-router/assets/list.jpg" />
+
+  <meta itemprop="name" content="Order your favorite food" />
+  <meta itemprop="description" content="Multi-page mentoring website using React Router" />
+  <meta itemProp="image" content="https://asmodeus-xs.github.io/typescript-router/assets/list.jpg" />
+
+  <!-- Тип окна -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="React mentoring" />
+  <meta property="twitter:domain" content="asmodeus-xs.github.io">
+  <meta property="twitter:url" content="https://asmodeus-xs.github.io/typescript-router/">
+  <meta name="twitter:title" content="React mentoring">
+  <meta name="twitter:description" content="Multi-page mentoring website using React Router" />
+  <meta property="twitter:image" content="https://asmodeus-xs.github.io/typescript-router/assets/list.jpg" />
+
   <title>Vite + TS + React Router</title>
 </head>
 
